editors/tree-sitter-wire/test/corpus/v1.txt
==================
registry namespace use
==================

use std.io.{@command as @shell, CommandSpec as Spec};

node run
  <- spec: Spec;
  -> result: CommandResult = @shell {} (spec);
run

---

(source_file
  (use_stmt
    namespace: (use_namespace)
    items: (use_item
      (use_executor_item
        name: (identifier)
        alias: (identifier)))
    items: (use_item
      (use_contract_item
        name: (identifier)
        alias: (identifier))))
  (node_decl
    name: (identifier)
    inputs: (input_clause
      label: (identifier)
      contract: (contract_name
        (contract)))
    body: (executor_single_output_body
      output: (output_variant
        label: (identifier)
        contract: (contract_name
          (contract)))
      call: (inline_executor_call
        name: (qualified_ident
          (identifier))
        config: (record)
        input: (core_pure_expr
          (core_pure_ident)))))
  file_return: (expression
    (ident_ref
      (identifier))))

==================
node-body kind application
==================

kind one_qubit_gate(label: PortLabel, gate: ConfiguredExecutor) =
  <- label: Qubit;
  -> label: Qubit;
  = gate (label);

node screen_h = one_qubit_gate(screen, h_gate);
screen_h

---

(source_file
  (kind_decl
    name: (identifier)
    params: (kind_param
      name: (identifier)
      class: (kind_param_class))
    params: (kind_param
      name: (identifier)
      class: (kind_param_class))
    inputs: (input_clause
      label: (identifier)
      contract: (contract_name
        (contract)))
    body: (executor_body
      outputs: (executor_output_clause
        output: (output_body
          (output_variant
            label: (identifier)
            contract: (contract_name
              (contract)))))
      call: (executor_call
        (configured_executor_call
          name: (identifier)
          input: (core_pure_expr
            (core_pure_ident))))))
  (node_decl
    name: (identifier)
    kind: (kind_application
      name: (identifier)
      args: (expression
        (ident_ref
          (identifier)))
      args: (expression
        (ident_ref
          (identifier)))))
  file_return: (expression
    (ident_ref
      (identifier))))

==================
node with sum output and file return
==================

contract EvidenceBundle;
node planner
  -> plan: PlannerOutput | error: ExecutorError ;
  = @llm.planner ({}) ;
planner

---

(source_file
  (contract_decl
    name: (contract_name
      (contract)))
  (node_decl
    name: (identifier)
    body: (executor_body
      outputs: (executor_output_clause
        output: (output_body
          (output_variant
            label: (identifier)
            contract: (contract_name
              (contract)))
          (output_variant
            label: (identifier)
            contract: (contract_name
              (contract)))))
      call: (executor_call
        (inline_executor_call
          name: (qualified_ident
            (identifier)
            (identifier))
          input: (core_pure_expr
            (core_pure_record))))))
  file_return: (expression
    (ident_ref
      (identifier))))

==================
graph forms, nested form lets, and inherit
==================

kind rz_gate(label: PortLabel, angle: Value) =
  <- label: Qubit;
  -> label: Qubit = @quantum.rz { inherit angle; } (label);

form turn(label: PortLabel) = {
  node rz = rz_gate(label, 1.5707963267948966);
  node sx = qubit_gate(label, quantum_sx);
  let path = rz => sx;

  path;
};

form eraser(phase: Value, marker: Graph) = {
  node phase_shift = rz_gate(q, phase);
  let inner = turn(q);
  let tagged = marker;

  (inner => phase_shift) <> tagged;
};

export let run = eraser(0.0, marker_readout);
run

---

(source_file
  (kind_decl
    name: (identifier)
    params: (kind_param
      name: (identifier)
      class: (kind_param_class))
    params: (kind_param
      name: (identifier)
      class: (kind_param_class))
    inputs: (input_clause
      label: (identifier)
      contract: (contract_name
        (contract)))
    body: (executor_single_output_body
      output: (output_variant
        label: (identifier)
        contract: (contract_name
          (contract)))
      call: (inline_executor_call
        name: (qualified_ident
          (identifier)
          (identifier))
        config: (record
          (inherit_field
            name: (identifier)))
        input: (core_pure_expr
          (core_pure_ident)))))
  (form_decl
    name: (identifier)
    params: (form_param
      name: (identifier)
      class: (form_param_class))
    items: (form_item
      (node_decl
        name: (identifier)
        kind: (kind_application
          name: (identifier)
          args: (expression
            (ident_ref
              (identifier)))
          args: (expression
            (number)))))
    items: (form_item
      (node_decl
        name: (identifier)
        kind: (kind_application
          name: (identifier)
          args: (expression
            (ident_ref
              (identifier)))
          args: (expression
            (ident_ref
              (identifier))))))
    items: (form_item
      (form_let_binding
        name: (identifier)
        value: (expression
          (topology_expression
            left: (ident_ref
              (identifier))
            right: (ident_ref
              (identifier))))))
    result: (expression
      (ident_ref
        (identifier))))
  (form_decl
    name: (identifier)
    params: (form_param
      name: (identifier)
      class: (form_param_class))
    params: (form_param
      name: (identifier)
      class: (form_param_class))
    items: (form_item
      (node_decl
        name: (identifier)
        kind: (kind_application
          name: (identifier)
          args: (expression
            (ident_ref
              (identifier)))
          args: (expression
            (ident_ref
              (identifier))))))
    items: (form_item
      (form_let_binding
        name: (identifier)
        value: (form_application
          name: (identifier)
          args: (expression
            (ident_ref
              (identifier))))))
    items: (form_item
      (form_let_binding
        name: (identifier)
        value: (expression
          (ident_ref
            (identifier)))))
    result: (expression
      (topology_expression
        left: (paren_expression
          (expression
            (topology_expression
              left: (ident_ref
                (identifier))
              right: (ident_ref
                (identifier)))))
        right: (ident_ref
          (identifier)))))
  (let_binding
    name: (identifier)
    value: (form_application
      name: (identifier)
      args: (expression
        (number))
      args: (expression
        (ident_ref
          (identifier)))))
  file_return: (expression
    (ident_ref
      (identifier))))

==================
pure output equations
==================

contract EvidenceSet;
contract AcceptedSet;
contract RejectedSet;

let acceptedItem = item: item.score >= 0.7;

node classify
  <- evidence: EvidenceSet ;
  -> accepted: AcceptedSet = acceptedItems ;
  -> rejected: RejectedSet = filter (item: !(acceptedItem item)) items;
  where let
    items = evidence.items ;
    acceptedItems = items |> filter acceptedItem ;
  in
  { items = items ; acceptedItems = acceptedItems ; } ;

classify

---

(source_file
  (contract_decl
    name: (contract_name
      (contract)))
  (contract_decl
    name: (contract_name
      (contract)))
  (contract_decl
    name: (contract_name
      (contract)))
  (let_binding
    name: (identifier)
    value: (core_pure_expr
      (core_pure_lambda
        param: (identifier)
        body: (core_pure_expr
          target: (core_pure_ident)
          field: (identifier)
          right: (number)))))
  (node_decl
    name: (identifier)
    inputs: (input_clause
      label: (identifier)
      contract: (contract_name
        (contract)))
    body: (pure_body
      (pure_output_equation
        output: (output_variant
          label: (identifier)
          contract: (contract_name
            (contract)))
        body: (pure_output_expr
          expr: (core_pure_expr
            (core_pure_ident))))
      (pure_output_equation
        output: (output_variant
          label: (identifier)
          contract: (contract_name
            (contract)))
        body: (pure_output_expr
          expr: (core_pure_expr
            function: (core_pure_ident)
            argument: (core_pure_expr
              (core_pure_lambda
                param: (identifier)
                body: (core_pure_expr
                  expr: (core_pure_expr
                    function: (core_pure_ident)
                    argument: (core_pure_ident)))))
            argument: (core_pure_ident)))))
    where: (where_clause
      expr: (core_pure_expr
        (core_pure_let
          (core_pure_binding
            name: (identifier)
            value: (core_pure_expr
              target: (core_pure_ident)
              field: (identifier)))
          (core_pure_binding
            name: (identifier)
            value: (core_pure_expr
              (core_pure_pipe
                left: (core_pure_ident)
                function: (core_pure_ident)
                argument: (core_pure_ident))))
          body: (core_pure_expr
            (core_pure_record
              (core_pure_field
                path: (field_path
                  (identifier))
                value: (core_pure_expr
                  (core_pure_ident)))
              (core_pure_field
                path: (field_path
                  (identifier))
                value: (core_pure_expr
                  (core_pure_ident)))))))))
  file_return: (expression
    (ident_ref
      (identifier))))
